# docscraper

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ru.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: README_en.md  README_ru.md  README_zh.md
