[tool.poetry]
name = "docscraper"
version = "0.1.0"
description = "Documentation scraper and parser that transforms web docs into RAG-optimized markdown files"
authors = ["Eugene Agurin <eugene@agurin.tech>"]
readme = "README.md"
packages = [{include = "docscraper"}]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.2.1"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
openai = "^1.6.1"
beautifulsoup4 = "^4.12.2"
loguru = "^0.7.2"
browser-use = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]